@@ -76,7 +76,7 @@ if (isset($_GET["htmlblob_id"]))
 			
 			Events::SendEvent('Core', 'DeleteGlobalContentPost', array('global_content' => &$blobobj));
 
-			audit($htmlblob_id, $htmlblob_name, 'Deleted Html Blob');
+			audit($htmlblob_id, $htmlblob_name, 'Deleted Global Content Block');
 		}
 	}
 }
